--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -34,19 +34,10 @@ WinX = Win+X
 LnkFile = .lnk file
 UwpLnk = UWP .lnk
 ExeFile = .exe files
-
-TextFile = Text file
-ImageFile = Image file
-VideoFile = Video file
-AudioFile = Audio file
-ImageDirectory = Image folder
-VideoDirectory = Video folder
-AudioDirectory = Audio folder
-
-UnknownType = Unknown file type
 CustomExtension = Specific file type
 PerceivedType = Perceived file type
 DirectoryType = Folder type
+UnknownType = Unknown file type
 
 EnhanceMenu = Menu ehancements
 ThirdRules = Third-party rules
@@ -81,19 +72,10 @@ WinX = Win8-Win10 context menu for the Win+X Start Menu
 LnkFile = Context menu for all shortcuts
 UwpLnk = Context menu for all Win10, Win8 UWP apps
 ExeFile = Context menu for .exe executable files
-
-TextFile = Context menu for text files (.txt, .ini, etc.)
-ImageFile = Context menu for image files (.jpg, .png, etc.)
-VideoFile = Context menu for video files (.avi, .wmv, etc.)
-AudioFile = Context menu for audio files (.mp3, .wav, etc.)
-ImageDirectory = Context menu for image file folders
-VideoDirectory = Context menu for video file folders
-AudioDirectory = Context menu for audio file folders
-
-UnknownType = Context menu for file with a file type that are not associated with any app
 CustomExtension = Customize the context menu for any file type
 PerceivedType = Customize the context menu for the specified perceived file
 DirectoryType = Customize the context menu for the specified folder type
+UnknownType = Context menu for file with a file type that are not associated with any app
 
 EnhanceMenu = Add some useful menu items
 ThirdRules = Part of the internal menu setting rules of third-party programs included in the program dictionary
@@ -118,9 +100,6 @@ OnlyInExplorer = Show only in File Explorer
 NoWorkingDirectory = Do not use the folder information in the context menu
 NeverDefault = Never use the left button to execute commands by default
 ShowAsDisabledIfHidden = If item is deactivated, gray out instead of hiding it
-
-ShowSeparator = Show separators above this item
-
 Details = Detailed information
 WebSearch = Web search
 ChangeCommand = Change command
@@ -148,11 +127,6 @@ Cancel = Cancel
 Browse = Browse
 Program = Program
 RegistryFile = Registry file
-
-NewShellItem = Create a new "Shell" type context menu item
-NewSendToItem = Create new "Send to" submenu
-NewOpenWithItem = Create a new "Open with" menu item
-
 ItemText = Item text
 ItemCommand = Menu command
 CommandArguments = Command arguments
@@ -161,9 +135,6 @@ MultiMenu = Multi-level
 Public = Public
 Private = Private
 InputGuid = Enter GUID local dictionary
-
-SelectExtension = Select a file extension
-
 AddGuidDic = Add GUID local dictionary
 DeleteGuidDic = Delete
 TextFile = Text file
@@ -177,6 +148,7 @@ DocumentDirectory = Document folder
 ImageDirectory = Image folder
 VideoDirectory = Video folder
 AudioDirectory = Audio folder
+EditSubItems = Edit sub-menu items for "%s"
 CheckReference = Check the menu item to which you want to add a reference to
 CheckCommon = Check the common menu items you want to add
 CheckCopy = Check the menu item you want to copy
@@ -204,7 +176,6 @@ CannotChangePath = File path changes are not allowed!
 CopiedToClipboard = Copy to clipboard:
 MalformedGuid = GUID with incorrect format
 UnknownGuid = Unknown GUID!
-
 HasBeenAdded = This item has been added!
 EditInitialData = This program currently only supports editing the initial data of plain text files (.txt, .bat, etc.).\nFor other types of files, please edit the registry "Data" key value by yourself.\nConfirm if you want to continue the operation.
 PromptIsOpenItem = This item has an "Open" menu,\nBlind operations may prevent you from opening files and folders,\nConfirm if you want to continue the operation. (Not recommended)
@@ -225,16 +196,10 @@ SendToDrive = Only works if a removable disk is connected.\nDisplays all partiti
 BuildSendtoMenu = Disabling this option will speed up the pop-up speed of the main menu\nbut will slow down the pop-up speed of the "Send to" sub-menu
 InvalidItem = If a menu item is invalid, all menu items under this item will be hidden (deletion recommended).
 EditSubItems = Edit sub-menu Items
-
 AddExistingItems = Add references to existing projects
-
 AddReference = Add reference from public reference project
 AddFromParentMenu = Copy item from parent menu
 AddSeparator = Add seperator
-Separator = Project seperator
-
-AddCommonItems = Add frequently used menu items
-
 DeleteGuidDic = Delete the local GUID dictionary added by the user
 LockNewMenu = Once enabled, it can prevent third-party programs from adding items\n and can sort existing items (close and restore)
 CheckUpdate = The program automatically looks for updates once a month (when the program is started)\nYou can manually click to browse Github, Gitee to check for updates
@@ -264,9 +229,7 @@ UseStoreOpenWith = Find apps in Microsoft Store
 ShareWithSkype = Share using Skype
 NewItem = Create new menu item
 AddGuidBlockedItem = Add GUID blocked item
-CurrentExtension = The currently selected file type is
 LockNewMenu = Lock the new menu
-EditSubItems = Edit sub-menu items for "% s"
 InvalidItem = Invalid menu item:
 Separator = >>>>>> Separator <<<<<<
 CurrentExtension = The currently selected file extension is %s
@@ -279,7 +242,6 @@ GuidInfosDictionary = GUID information
 ThridRulesDictionary = Third-party rules
 CommonItemsDictionary = Common Menu
 Translators = Translators
-
 DonationList = Donation list
 ConfigPath = Save location of configuration and data files
 AppDataDir = AppData directory
@@ -297,7 +259,7 @@ WinXSortable = Enable WinX menu sorting function
 ShowFilePath = Show file path of item in status bar on hover
 OpenMoreRegedit = Allow the registry editor to open more
 
-AboutApp = [Main function]\n 1. Manage common location context menu\n 2. Customize and add context menu\n\n[Compatibility]\n 1. Suitable for Win7, 8, 8.1, 10, Vista\n 2. Suitable For x64, x32 CPU operating system\n 3. Adapt to high resolution screens, the best zoom ratio is 150%\n\n[Open source code]\n 1. Code language: C#, Winform program\n 2. GitHub project: https://github.com/BluePointLilac/ContextMenuManager\n 3. Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager\n\n[Contact Author]\n 1. The program is developed by myself, yet I of course also want to thank Meng Yanshe @ Kengchen for answering questions in normal times, since my ability for this is limited.\n There are inevitably some bugs, and everyone is welcome to leave feedback and make suggestions\n 2. Personal B station: https://space.bilibili.com/34492771 (I welcome everyone to follow me!)\n 3. QQ mailbox: 1617859183@qq.com\n\n[Resource Reference]\n 1. The main program icon comes from: https://www.easyicon.net/1208132-mouse_icon.html\n 2. Program button icons are mainly from the Alibaba vector icon library: https://www.iconfont.cn/\n 3. WinX HashLnk (Rafael Rivera): https://github.com/riverar/hashlnk\n\n[Program update]\n 1. The program has a check and update function. In addition to updating the program itself, it also updates the dictionary. After the download is complete, you can directly overwrite the original file.\n 2. Because GitHub Raw is walled and Gitee Raw has a monthly access limit, the program is set to check for updates once a month.\n You can also browse the GitHub Releases column or the Gitee release column to check if there are updates\n\n[Warm Tips]\n 1. Some special menu items may be affected by other factors, they will not be displayed in the context menu.\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal.\n 2. The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time.\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible.\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program.\n 3. This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items.\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable/disable switch. 
+AboutApp = [Main function]\n 1. Manage common location context menu\n 2. Customize and add context menu\n\n[Compatibility]\n 1. Suitable for Win7, 8, 8.1, 10, Vista\n 2. Suitable For 64bit, 32bit CPU operating system\n 3. Adapt to high resolution screens, the best zoom ratio is 150%\n\n[Open source code]\n 1. Code language: C#, Winform program\n 2. GitHub project: https://github.com/BluePointLilac/ContextMenuManager\n 3. Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager\n\n[Contact Author]\n 1. The program is developed by myself, yet I of course also want to thank Meng Yanshe @ Kengchen for answering questions in normal times, since my ability for this is limited.\n There are inevitably some bugs, and everyone is welcome to leave feedback and make suggestions\n 2. Personal B station: https://space.bilibili.com/34492771 (I welcome everyone to follow me!)\n 3. QQ mailbox: 1617859183@qq.com\n\n[Resource Reference]\n 1. The main program icon comes from: https://www.easyicon.net/1208132-mouse_icon.html\n 2. Program button icons are mainly from the Alibaba vector icon library: https://www.iconfont.cn/\n\n[Program update]\n 1. The program has a check and update function. In addition to updating the program itself, it also updates the dictionary. After the download is complete, you can directly overwrite the original file.\n 2. Because GitHub Raw is walled and Gitee Raw has a monthly access limit, the program is set to check for updates once a month.\n You can also browse the GitHub Releases column or the Gitee release column to check if there are updates\n\n[Warm Tips]\n 1. Some special menu items may be affected by other factors, they will not be displayed in the context menu.\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal.\n 2. The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time.\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible.\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program.\n 3. This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items.\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable/disable switch. 
 
 Dictionaries = [Dictionary description]\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary.\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it.\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project.\n The right tab is the original dictionary content, you can switch the tab to view it\n\n[Dictionary content]\n 1. Program display text language dictionary (Languages directory)\n 2. ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini)\n 3. Third-party program menu internal setting dictionary (ThirdRulesDic.xml)\n 4. Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
 
