--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -34,8 +34,8 @@ WinX = Win+X
 LnkFile = lnkファイル
 UwpLnk = uwp lnk
 ExeFile = アプリケーション
-UnknownType = 不明な形式
 CustomExtension = カスタムフォーマット
+UnknownType = 不明な形式
 
 GuidBlocked = GUIDロック
 ThirdRules = 第三者のルール
@@ -64,15 +64,8 @@ WinX = Win10、Win8「スタート」ボタンの右クリックメニュー
 LnkFile = すべてのショートカットの右クリックメニュー
 UwpLnk = すべてのWin10、Win8 UWPアプリの右クリックメニュー
 ExeFile = すべてのアプリケーションの右クリックメニュー
-TextFile = テキスト形式（.txt、.iniなど）ファイルの右クリックメニュー
-ImageFile = イメージ形式（.jpg、.pngなど）ファイルの右クリックメニュー
-VideoFile = ビデオ形式（.avi、.wmvなど）ファイルの右クリックメニュー
-AudioFile = オーディオ形式（.mp3、.wavなど）ファイルの右クリックメニュー
-ImageDirectory = イメージファイルディレクトリの右クリックメニュー
-VideoDirectory = ビデオファイルディレクトリの右クリックメニュー
-AudioDirectory = オーディオファイルディレクトリの右クリックメニュー
+CustomExtension = 指定のファイル形式の右クリックメニュー
 UnknownType = すべての不明な形式のファイルの右クリックメニュー
-CustomType = 指定のファイル形式の右クリックメニュー
 
 GuidBlocked = GUIDに依存する頑固なShellExプロジェクトに適しています（一部のGUIDは無効）
 ThirdRules = プログラムディレクトリに含まれる第三者プログラムの内部メニュー設定ルール
@@ -110,9 +103,6 @@ Ok = 確認
 Cancel = キャンセル
 Browse = ブラウズ
 Program = プログラム
-NewShellItem = 新しい「Shell」タイプの右クリックメニュー項目を作成
-NewSendToItem = 新しい「送る」サブメニューを作成
-NewOpenWithItem = 新しい「開く」メニュー項目を作成
 ItemText = アイテムテキスト
 ItemCommand = 菜アイテムコマンド
 SingleMenu = シングルメニュー
@@ -125,6 +115,7 @@ AudioFile = オーディオファイル
 ImageDirectory = イメージディレクトリ
 VideoDirectory = ビデオディレクトリ
 AudioDirectory = オーディオディレクトリ
+EditSubItems = 「%s」のサブメニュー項目を編集
 CheckReference = 引用を追加したいメニュー項目をチェックしてください
 CheckCommon = 追加したい一般的なメニュー項目を確認してください
 SelectExtension = ファイル拡張子を選択してください
@@ -183,7 +174,6 @@ UseStoreOpenWith = Microsoft Storeでアプリを探す
 NewItem = 新しいメニュー項目を作成
 AddGuidBlockedItem = GUIDロックアイテムを追加
 CurrentExtension = 現在選択しているファイル形式は
-EditSubItems = 「％s」のサブメニュー項目を編集
 InvalidItem = 無効なメニュー項目：
 Separator = >>>>>> プロジェクトの分割線 <<<<<<
 DictionaryDescription = 辞書説明
