--- a/languages/zh-CN.ini
+++ b/languages/zh-CN.ini
@@ -35,10 +35,11 @@ WinX = Win+X
 LnkFile = lnk文件
 UwpLnk = uwp lnk
 ExeFile = exe文件
-UnknownType = 未知格式
 CustomExtension = 自选格式
 PerceivedType = 感知类型
 DirectoryType = 目录类型
+UnknownType = 未知格式
+MenuAnalysis = 菜单分析
 
 EnhanceMenu = 增强菜单
 ThirdRules = 三方规则
@@ -73,10 +74,11 @@ WinX = Win8~Win10 "开始" 按钮的右键 Win+X 菜单项目
 LnkFile = 所有LNK快捷方式的右键菜单
 UwpLnk = Win8~Win10 UWP应用快捷方式的右键菜单
 ExeFile = 所有EXE可执行文件的右键菜单
-UnknownType = 所有未关联打开方式的格式文件的右键菜单
 CustomExtension = 自定义指定格式文件的右键菜单
 PerceivedType = 自定义指定文件感知类型的右键菜单
 DirectoryType = 自定义指定目录感知类型的右键菜单
+UnknownType = 所有未关联打开方式的格式文件的右键菜单
+MenuAnalysis = 分析指导文件对象所有的右键菜单所在位置
 
 EnhanceMenu = 添加一些有用的菜单项
 ThirdRules = 程序字典内收录的部分第三方程序内部菜单设置规则
@@ -140,6 +142,7 @@ Private = 私有
 InputGuid = 输入Guid
 AddGuidDic = 添加Guid本地字典
 DeleteGuidDic = 删除
+NoPerceivedType = 无感知
 TextFile = 文本文件
 DocumentFile = 文档文件
 ImageFile = 图像文件
@@ -151,6 +154,7 @@ DocumentDirectory = 文档目录
 ImageDirectory = 图像目录
 VideoDirectory = 视频目录
 AudioDirectory = 音频目录
+EditSubItems = 编辑 "%s" 的子菜单项目
 CheckReference = 请勾选你想要引用的菜单项目
 CheckCopy = 请勾选你想要复制的菜单项目
 SelectExtension = 请选择一个文件扩展名
@@ -159,6 +163,7 @@ SelectDirectoryType = 请选择一个目录感知类型
 SelectGroup = 请选择保存分组
 SelectNewItemType = 请选择新建菜单类型
 SelectSubMenuMode = 该多级菜单子项目数为0, 你有两个选择:\n①该多级菜单的所有子菜单项目私有(推荐),\n②该多级菜单可与其他多级菜单引用相同子项,\n请做出你的选择......
+SelectObjectType = 请选择要分析的对象类型
 TranslateTool = 翻译器
 DefaultText = 默认文本
 OldTranslation = 旧译文
@@ -208,6 +213,7 @@ AddFromParentMenu = 从母菜单中复制项目
 AddSeparator = 添加分隔线
 DeleteGuidDic = 删除用户自行添加的该项的本地Guid字典
 LockNewMenu = 启用后可阻止第三方程序增加项目\n且可对现有项目排序(关闭后复原)
+DropOrSelectObject = 请拖拽或通过按钮选择文件或目录
 CheckUpdate = 程序每月自动检测一次更新 (启动程序时)\n你可手动点击浏览Github、Gitee检查更新
 LastCheckUpdateTime = 上次自动更新检查时间：
 OpenLanguagesDir = 打开语言文件夹
@@ -236,20 +242,18 @@ UseStoreOpenWith = 在Microsoft Store中查找应用
 NewItem = 新建一个菜单项目
 AddGuidBlockedItem = 添加GUID锁定项目
 LockNewMenu = 锁定新建菜单
-EditSubItems = 编辑 "%s" 的子菜单项目
 InvalidItem = 无效菜单项目:
 Separator = >>>>>> 分割线 <<<<<<
 SelectRegPath = 请选择注册表项
 CurrentExtension = 你当前选择的文件扩展名为 %s
 CurrentPerceivedType = 你当前选择的文件感知类型为 %s
 CurrentDirectoryType = 你当前选择的目录感知类型为 %s
+CurrentFilePath = 你当前选择的文件对象路径为
 CurrentRegPath = 你当前选择的注册表路径为
 WinXSortable = 启用 WinX 菜单排序功能
 ShowFilePath = 状态栏实时显示文件路径
 OpenMoreRegedit = 允许注册表编辑器多开
 RestartExplorer = 当前部分操作需要重启文件资源管理器生效
-
-
 DictionaryDescription = 字典说明
 GuidInfosDictionary = GUID信息
 Translators = 翻译贡献者
@@ -266,8 +270,10 @@ ProtectOpenItem = 保护 "打开" 菜单项目
 WebSearchEngine = 网页搜索使用的搜索引擎
 CustomEngine = 自定义
 SetCustomEngine = 设定搜索引擎 (以 %s 代替搜索关键词)
+HideDisabledItems = 不显示已禁用的菜单项目
+SetPerceivedType = 设置扩展名为 %s 的文件感知类型为
 
-AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、8、8.1、10、Vista\n 2.适用于 x64、x32 CPU 操作系统\n 3.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform 程序\n 2.Github 仓库: https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee 仓库: https://gitee.com/BluePointLilac/ContextMenuManager \n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站: https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.QQ邮箱: 1617859183@qq.com\n\n【资源引用】\n 1.程序主图标来自: https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序按钮图标主要来自阿里巴巴矢量图标库: https://www.iconfont.cn/ \n 3.WinX HashLnk (Rafael Rivera): https://github.com/riverar/hashlnk \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用/禁用开关。
+AboutApp = 【主要功能】\n 1.管理常见位置右键菜单\n 2.自定义添加右键菜单\n\n【兼容性能】\n 1.适用于Win7、8、8.1、10、Vista\n 2.适用于 64bit、32bit CPU 操作系统\n 3.适配高分屏，最佳缩放比为150%\n\n【代码开源】\n 1.代码语言：C Sharp, Winform 程序\n 2.Github 仓库: https://github.com/BluePointLilac/ContextMenuManager \n 3.Gitee 仓库: https://gitee.com/BluePointLilac/ContextMenuManager \n\n【联系作者】\n 1.程序由我个人独立开发，当然也要感谢萌研社 @坑晨 平时的答疑解惑，能力有限，\n    难免出现一些Bug，欢迎大家反馈Bug和提出建议\n 2.个人B站: https://space.bilibili.com/34492771 (欢迎大家关注我!)\n 3.QQ邮箱: 1617859183@qq.com\n\n【资源引用】\n 1.程序主图标来自: https://www.easyicon.net/1208132-mouse_icon.html \n 2.程序按钮图标主要来自阿里巴巴矢量图标库: https://www.iconfont.cn/ \n\n【程序更新】\n 1.程序有检查更新功能，除了更新程序本身还会更新字典，下载完成后直接覆盖原文件即可\n 2.由于Github Raw被墙，Gitee Raw有每月次数访问上限，程序设置为每月检测一次更新，\n    大家也可以自己浏览Github Releases栏或Gitee 发行版栏检查是否有更新 \n\n【温馨提示】\n 1.一些特殊菜单项可能会受到其他因素影响导致不会显示在右键菜单中，\n    但是按照程序使用的通用规则在此程序中仍会显示为启用，这是正常的现象。\n 2.每个右键管理程序禁用菜单方法可能不同, 建议不要同时使用多个右键菜单管理程序,\n    大部分程序使用简单暴力的备份-删除法, 此程序尽可能使用了系统提供的键值进行隐藏操作,\n    若之前使用过其他程序禁用菜单项，请先使用对应程序还原, 不然可能无法在此程序中看到它。\n 3.此程序不用于清理未卸载干净的程序，但可帮助你定位菜单项相关注册表和文件位置,\n    你可根据相关内容进行你的操作，如果你是一个电脑小白，建议只碰启用/禁用开关。
 
 Dictionaries = 【字典说明】\n 此程序拥有几个字典文件, 每份字典又有用户字典和网络字典\n 如果想为此程序添加字典可右键保存文件, 并按照文件内说明进行添加\n 可将你的字典发送到我的邮箱或提交到Github为此项目做出你的贡献\n 右侧选项卡中为原始字典内容, 你可以切换选项卡进行查看\n\n【字典内容】\n 1.程序显示文本语言字典 (Languages目录)\n 2.ShellEx菜单项GUID文本图标字典 (GuidInfosDic.ini)\n 3.第三方程序菜单内部设置字典 (ThirdRulesDic.xml)\n 4.增强菜单项目字典 (EnhanceMenusDic.xml)
 
