--- a/languages/ja-JP.ini
+++ b/languages/ja-JP.ini
@@ -1,8 +1,3 @@
-;此文件为ContextMenuManager程序的显示文本字典, 字典内换行符使用\n转义
-;如果你想要帮助作者为此程序添加其他语言字典, 可以修改此文本并保存在.\config\languages文件夹内, 
-;比如美国英语字典保存为en-US.ini, 并给[General]\Language赋值 en-US 英语
-;可以在Github或Gitee上Fork该项目并提交申请给我，或者直接发送文件到邮箱1617859183@qq.com
-
 [General]
 Language = ja-JP 日本語
 Translator = 夕綺Yuuki
@@ -119,35 +114,34 @@ EditSubItems = 「%s」のサブメニュー項目を編集
 CheckReference = 引用を追加したいメニュー項目をチェックしてください
 CheckCommon = 追加したい一般的なメニュー項目を確認してください
 SelectExtension = ファイル拡張子を選択してください
-SelectSubMenuMode = 当現在のマルチレベルメニューのサブ項目数は0です。二つの選択肢がある:\n①このマルチレベルメニューのすべてのサブメニュー項目はプライベートですが、\n②このマルチレベルメニューは、他のマルチレベルメニューと同じサブアイテムを参照できます、\n選択してください。
+SelectSubMenuMode = 当現在のマルチレベルメニューのサブ項目数は0です。二つの選択肢がある:\r\n①このマルチレベルメニューのすべてのサブメニュー項目はプライベートですが、\r\n②このマルチレベルメニューは、他のマルチレベルメニューと同じサブアイテムを参照できます、\r\n選択してください。
 
-[MessageBox]
+[Message]
 TextCannotBeEmpty = メニューテキストを空にすることはできません！
 CommandCannotBeEmpty = メニューコマンドを空にすることはできません！
 StringParsingFailed = ローカライズされた文字列解析に失敗!
 TextLengthCannotExceed80 = メニューテキストが長すぎます。長さは80を超えることはできません！
-ConfirmDeletePermanently = このアイテムを完全に削除しますか。\nこの操作は復元できません、注意してください!
+ConfirmDeletePermanently = このアイテムを完全に削除しますか。\r\nこの操作は復元できません、注意してください!
 ConfirmDeleteReference = プロジェクトへの参照を削除しますか。
 ConfirmDelete = このアイテムを削除しますか。
-ConfirmDeleteReferenced = このアイテムを完全に削除しますか。\nこのアイテムを参照するすべてのアイテムは無効になります、注意してください。
-CannotAddNewItem = システムはサブメニュー項目の最大数を16に制限します、\n追加できません！
-UnsupportedFilename = サポートされていないファイル名、\n同じファイル名のメニュー項目がすでに存在している可能性があります！
+ConfirmDeleteReferenced = このアイテムを完全に削除しますか。\r\nこのアイテムを参照するすべてのアイテムは無効になります、注意してください。
+CannotAddNewItem = システムはサブメニュー項目の最大数を16に制限します、\r\n追加できません！
+UnsupportedFilename = サポートされていないファイル名、\r\n同じファイル名のメニュー項目がすでに存在している可能性があります！
 UnsupportedExtension = サポートされていないファイル拡張子！
 CannotChangePath = ファイルパスの変更は許可されていません！
 CopiedToClipboard = クリップボードにコピー：
 UnknownGuid = 不明なGuid！
 HasBeenAdded = このアイテムが追加されました！
-EditInitialData = プレーンテキストファイル（.txt、.batなど）のみをサポートします、\nバイナリデータを書き込む必要がある場合は、レジストリ内の関連するタイプの「Data」キー値を自分で編集してください、\n編集を続けますか。
-PromptIsOpenItem = このアイテムは「開く」メニュー、\n盲目的な操作には、ファイルやフォルダを開くことができなくなる場合があります、\n続行するかどうか。(お勧めしません)
+EditInitialData = プレーンテキストファイル（.txt、.batなど）のみをサポートします、\r\nバイナリデータを書き込む必要がある場合は、レジストリ内の関連するタイプの「Data」キー値を自分で編集してください、\r\n編集を続けますか。
+PromptIsOpenItem = このアイテムは「開く」メニュー、\r\n盲目的な操作には、ファイルやフォルダを開くことができなくなる場合があります、\r\n続行するかどうか。(お勧めしません)
 RestartApp = プログラムが再起動します！
-UpdateApp = 現在アップデートがありますが、ダウンロードしますか。\n更新情報：バージョン番号
 FileOrFolderNotExists = ファイルまたはフォルダーが存在しません！
 
 [Tip]
-RestartExplorer = Explorerを再起動すると、デスクトップがしばらくちらつきます。通常の現象を心配する必要はありません、\n後でコンピュータを再起動またはログオフして、操作を有効にすることもできます。
+RestartExplorer = Explorerを再起動すると、デスクトップがしばらくちらつきます。通常の現象を心配する必要はありません、\r\n後でコンピュータを再起動またはログオフして、操作を有効にすることもできます。
 CustomFolder = このオプションを無効にすると、ファイルシステムオブジェクトのプロパティパネルのカスタムタブも無効になります
-SendToDrive = リムーバブルディスクが挿入されている場合にのみ機能します、\nリムーバブルディスクのすべてのパーティションを表示する
-BuildSendtoMenu = このオプションを無効にすると、メインメニューのポップアップ速度が速くなります、\nただし、サブメニューポップアップへの送信速度が遅くなります
+SendToDrive = リムーバブルディスクが挿入されている場合にのみ機能します、\r\nリムーバブルディスクのすべてのパーティションを表示する
+BuildSendtoMenu = このオプションを無効にすると、メインメニューのポップアップ速度が速くなります、\r\nただし、サブメニューポップアップへの送信速度が遅くなります
 InvalidItem = メニュー項目が無効な場合、この項目の下にあるすべてのメニュー項目が非表示になります（削除することをお勧めします）
 EditSubItems = サブメニュー項目の編集
 AddExistingItems = 既存のプロジェクトへの参照を追加
