--- a/languages/en-US.ini
+++ b/languages/en-US.ini
@@ -1,4 +1,4 @@
-; This file is the display text dictionary of the ContextMenuManager program, and the newline characters in the dictionary are escaped with \n
+; This file is the display text dictionary of the ContextMenuManager program, and the newline characters in the dictionary are escaped with \r\n or \n
 ; If you want to help the author add other language dictionaries to this program, you can modify this text and save it in the .\config\languages folder,
 ;For example, save the American English dictionary as en-US.ini, and assign en-US English to [General]\Language
 ;Fork the project on Github or Gitee and submit an application to me, or send the file directly to the mailbox 1617859183@qq.com 
@@ -156,58 +156,53 @@ SelectExtension = Please select a file extension
 SelectPerceivedType = Please select a perceived file type
 SelectDirectoryType = Please select a perceived folder type
 SelectGroup = Select to save the group
-SelectSubMenuMode = The number of sub-items in the current multi-level menu is 0. There are two choices:\n① All sub-menu items in this multi-level menu are private (recommended),\n② The multi-level menu can reference the same sub-items as other multi-level menus.\nDemanding choice...
+DownloadLanguages = Download languages
+SelectSubMenuMode = The number of sub-items in the current multi-level menu is 0. There are two choices: \r\n ① All sub-menu items in this multi-level menu are private (recommended),\r\n ② The multi-level menu can reference the same sub-items as other multi-level menus. \r\n Demanding choice...
 
-[MessageBox]
+[Message]
 TextCannotBeEmpty = Menu text cannot be empty!
 CommandCannotBeEmpty = Menu command cannot be empty!
 StringParsingFailed = Localized string parsing failed!
 TextLengthCannotExceed80 = Menu text is too long. The length cannot exceed 80!
-ConfirmDeletePermanently = Are you sure you want to permanently delete this item?\nBe careful, this operation cannot be undone!
-DeleteButCanRestore = Are you sure you want to delete the registry item of this menu? \nSince automatic backup is enabled (enabled by default),\nit can be restored from the backup folder after deletion.
-ConfirmDeleteReference = Are you sure you want to delete this item?\nBe careful, all items referencing this item will become invalid!
+ConfirmDeletePermanently = Are you sure you want to permanently delete this item? \r\n Be careful, this operation cannot be undone!
+DeleteButCanRestore = Are you sure you want to delete the registry item of this menu? \r\n Since automatic backup is enabled (enabled by default),\r\n it can be restored from the backup folder after deletion.
+ConfirmDeleteReference = Are you sure you want to delete this item? \r\n Be careful, all items referencing this item will become invalid!
 ConfirmDelete = Are you sure you want to delete this item?
-ConfirmDeleteReferenced = Are you sure you want to permanently delete this item?\nPlease note that all items referencing this item will be invalid.
+ConfirmDeleteReferenced = Are you sure you want to permanently delete this item? \r\n Please note that all items referencing this item will be invalid.
 CannotAddNewItem = Cannot add! The system limits the maximum number of sub-menu items to 16.
-UnsupportedFilename = Unsupported filename.\nA menu item with the same filename may already exist!
+UnsupportedFilename = Unsupported filename. \r\n A menu item with the same filename may already exist!
 UnsupportedExtension = Unsupported file extension!
-NoOpenModeExtension = There is no app associated with this extension.\nRight-click a file of this type with this extension  to associate it with an app!
+NoOpenModeExtension = There is no app associated with this extension. \r\n Right-click a file of this type with this extension to associate it with an app!
 CannotChangePath = File path changes are not allowed!
 CopiedToClipboard = Copy to clipboard:
 MalformedGuid = GUID with incorrect format
 UnknownGuid = Unknown GUID!
 HasBeenAdded = This item has been added!
-EditInitialData = This program currently only supports editing the initial data of plain text files (.txt, .bat, etc.).\nFor other types of files, please edit the registry "Data" key value by yourself.\nConfirm if you want to continue the operation.
-PromptIsOpenItem = This item has an "Open" menu,\nBlind operations may prevent you from opening files and folders,\nConfirm if you want to continue the operation. (Not recommended)
+EditInitialData = This program currently only supports editing the initial data of plain text files (.txt, .bat, etc.).\r\n For other types of files, please edit the registry "Data" key value by yourself.\r\n Confirm if you want to continue the operation.
+PromptIsOpenItem = This item has an "Open" menu,\r\n Blind operations may prevent you from opening files and folders,\r\n Confirm if you want to continue the operation. (Not recommended)
 RestartApp = The program will restart!
-UpdateApp = There is an update available, would you like to download it?\nUpdate information: Version number
 FileNotExists = The file does not exist!
 FolderNotExists = The folder does not exist!
-NoUpdateDetected = No program update detected,\nbut the network dictionary file has been updated.
-AuthorityProtection = This menu registry item may be protected by security software.\nIt cannot be disabled, deleted, and other personalized modifications.
-WinXSorted = Some items have been renumbered in order to optimize the sorting function.\nYou need to restart File Explorer before changes take effect
+VersionIsLatest = The current version is the latest.
+AuthorityProtection = This menu registry item may be protected by security software.\r\n It cannot be disabled, deleted, and other personalized modifications.
+WinXSorted = Some items have been renumbered in order to optimize the sorting function.\r\n You need to restart File Explorer before changes take effect
 RestoreDefault = Confirm to restore to the default menu item.
 DeleteGroup = Are you sure to permanently delete this group and all its menu items?
 
 [Tip]
-RestartExplorer = The desktop will flicker for a while after restarting Explorer. This is normal.\nRestarting or logging in and out of your PC will also make the changes take effect.
-CustomFolder = Disabling this option\nwill also disable the custom tab in the file system object properties panel.
-SendToDrive = Only works if a removable disk is connected.\nDisplays all partitions of the removable disk.
-BuildSendtoMenu = Disabling this option will speed up the pop-up speed of the main menu\nbut will slow down the pop-up speed of the "Send to" sub-menu
-InvalidItem = If a menu item is invalid, all menu items under this item will be hidden (deletion recommended).
+RestartExplorer = The desktop will flicker for a while after restarting Explorer. This is normal.\r\n Restarting or logging in and out of your PC will also make the changes take effect.
+CustomFolder = Disabling this option will also disable the custom tab \r\n in the file system object properties panel.
+SendToDrive = Only works if a removable disk is connected.\r\n Displays all partitions of the removable disk.
+BuildSendtoMenu = Disabling this option will speed up the pop-up speed of the main menu \r\n but will slow down the pop-up speed of the "Send to" sub-menu
+InvalidItem = If a menu item is invalid, all menu items \r\n under this item will be hidden (deletion recommended).
 EditSubItems = Edit sub-menu Items
 AddExistingItems = Add references to existing projects
 AddReference = Add reference from public reference project
 AddFromParentMenu = Copy item from parent menu
 AddSeparator = Add seperator
 DeleteGuidDic = Delete the local GUID dictionary added by the user
-LockNewMenu = Once enabled, it can prevent third-party programs from adding items\n and can sort existing items (close and restore)
-CheckUpdate = The program automatically looks for updates once a month (when the program is started)\nYou can manually click to browse Github, Gitee to check for updates
-LastCheckUpdateTime = Last automatic update check time:
-OpenLanguagesDir = Open language folder
-OtherLanguages ​​= Download or upload files in other languages
-OpenDictionariesDir = Open dictionary folder
-ConfigPath = After changing the configuration and data file save path,\nsome of the enhanced menus that have been enabled will become invalid.\nThey can be re-enabled in the enhanced menu
+LockNewMenu = Once enabled, it can prevent third-party programs from adding items \r\n and can sort existing items (close and restore)
+ConfigPath = After changing the configuration and data file save path, \r\n some of the enhanced menus that have been enabled will become invalid.\r\n They can be re-enabled in the enhanced menu
 CommandFiles = This command depends on the configuration file. Moving the configuration file location will cause this menu item to become invalid. Re-enable it.
 CreateGroup = Create a new group
 
@@ -246,11 +241,8 @@ DonationList = Donation list
 ConfigPath = Save location of configuration and data files
 AppDataDir = AppData directory
 AppDir = Program directory
-OpenConfigDir = Open the directory where the configuration file is located
 AutoBackup = Automatically back up the registry when deleting menus
-OpenBackupDir = Open the backup folder
-CheckUpdate = Check for program and dictionary updates
-ImmediatelyCheckUpdate = Check now
+ImmediatelyCheck = Check now
 ProtectOpenItem = Protect the "Open" menu item
 WebSearchEngine = Search engine used for web searches
 CustomEngine = Custom
@@ -259,8 +251,8 @@ WinXSortable = Enable WinX menu sorting function
 ShowFilePath = Show file path of item in status bar on hover
 OpenMoreRegedit = Allow the registry editor to open more
 
-AboutApp = [Main function]\n 1. Manage common location context menu\n 2. Customize and add context menu\n\n[Compatibility]\n 1. Suitable for Win7, 8, 8.1, 10, Vista\n 2. Suitable For 64bit, 32bit CPU operating system\n 3. Adapt to high resolution screens, the best zoom ratio is 150%\n\n[Open source code]\n 1. Code language: C#, Winform program\n 2. GitHub project: https://github.com/BluePointLilac/ContextMenuManager\n 3. Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager\n\n[Contact Author]\n 1. The program is developed by myself, yet I of course also want to thank Meng Yanshe @ Kengchen for answering questions in normal times, since my ability for this is limited.\n There are inevitably some bugs, and everyone is welcome to leave feedback and make suggestions\n 2. Personal B station: https://space.bilibili.com/34492771 (I welcome everyone to follow me!)\n 3. QQ mailbox: 1617859183@qq.com\n\n[Resource Reference]\n 1. The main program icon comes from: https://www.easyicon.net/1208132-mouse_icon.html\n 2. Program button icons are mainly from the Alibaba vector icon library: https://www.iconfont.cn/\n\n[Program update]\n 1. The program has a check and update function. In addition to updating the program itself, it also updates the dictionary. After the download is complete, you can directly overwrite the original file.\n 2. Because GitHub Raw is walled and Gitee Raw has a monthly access limit, the program is set to check for updates once a month.\n You can also browse the GitHub Releases column or the Gitee release column to check if there are updates\n\n[Warm Tips]\n 1. Some special menu items may be affected by other factors, they will not be displayed in the context menu.\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal.\n 2. The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time.\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible.\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program.\n 3. This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items.\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable/disable switch. 
+AboutApp = [Main function] \r\n 1. Manage common location context menu \r\n 2. Customize and add context menu \r\n\r\n [Compatibility] \r\n 1. Suitable for Win7, 8, 8.1, 10, Vista \r\n 2. Suitable For 64bit, 32bit CPU operating system \r\n 3. Adapt to high resolution screens, the best zoom ratio is 150% \r\n\r\n [Open source code] \r\n  1. Code language: C Sharp, Winform program, MIT License \r\n 2. GitHub project: https://github.com/BluePointLilac/ContextMenuManager \r\n 3. Gitee project: https://gitee.com/BluePointLilac/ContextMenuManager \r\n\r\n [Warm Tips] \r\n 1. Some special menu items may be affected by other factors, they will not be displayed in the context menu. \r\n However, they will still be displayed as enabled in this program according to the general rules used by the program. This is normal. \r\n 2. The method of disabling the menu for each context menu management program may be different. It is recommended not to use multiple context menu management programs at the same time. \r\n Most programs use a simple and violent backup-delete method. This program uses the key values ​​provided by the system to hide operations as much as possible. \r\n If you have used other programs to disable the menu item before, please use the corresponding program to restore it, otherwise you may not be able to see it in this program. \r\n 3. This program is not used to clean up programs that have not been uninstalled, but it can help you locate the registry and file locations of the menu items. \r\n You can perform your operations according to the relevant content. If you are a computer novice, you are recommended to only touch the enable\disable switch. 
 
-Dictionaries = [Dictionary description]\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary.\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it.\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project.\n The right tab is the original dictionary content, you can switch the tab to view it\n\n[Dictionary content]\n 1. Program display text language dictionary (Languages directory)\n 2. ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini)\n 3. Third-party program menu internal setting dictionary (ThirdRulesDic.xml)\n 4. Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
+Dictionaries = [Dictionary description] \r\n This program has several dictionary files, and each dictionary has a user dictionary and a network dictionary. \r\n If you want to add a dictionary to this program, you can right-click to save the file and follow the instructions in the file to add it. \r\n Send your dictionary to my email or submit it to GitHub to make your contribution to this project. \r\n The right tab is the original dictionary content, you can switch the tab to view it \r\n\r\n[Dictionary content]\n 1. Program display text language dictionary (Languages directory) \r\n 2. ShellEx menu item GUID text icon dictionary (GuidInfosDic.ini) \r\n 3. Third-party program menu internal setting dictionary (ThirdRulesDic.xml) \r\n 4. Enhanced menu items Dictionary (EnhanceMenusDic.xml) 
 
-Donate = This program is completely free. If you find this software helpful,\nyou can donate by scanning the QR code below (WeChat, Alipay, Tencent QQ).\nThe amount is up to you. Thank you for your support! I also hope you consider \nstarring this program's project on Github or Gitee (this means a lot to me!).
+Donate = This program is completely free. If you find this software helpful,\r\n you can donate by scanning the QR code below (WeChat, Alipay, Tencent QQ).\r\n The amount is up to you. Thank you for your support! I also hope you consider \r\n starring this program's project on Github or Gitee (this means a lot to me!).
